Fix Image Layout BreakPoints

--- a/styles/base.module.css
+++ b/styles/base.module.css
@@ -24,10 +24,9 @@
 
 .image {
   position: absolute;
-  left: 50%;
   border-radius: 50%;
   opacity: 0.3;
   z-index: 1;
-  width: 475px;
-  height: 500px;
+  /* width: 475px;
+  height: 500px; */
 }
